force-app/main/default/objects/Log__c/fields/Log_Level__c.field-meta.xml
<CustomField>
    <fullName>Log_Level__c</fullName>
    <description>Logging Level</description>
    <inlineHelpText>Logging Level</inlineHelpText>
    <label>Log Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DEBUG</fullName>
                <color>#00CCCC</color>
                <label>Debug</label>
            </value>
            <value>
                <fullName>INFO</fullName>
                <color>#33CC00</color>
                <label>Info</label>
            </value>
            <value>
                <fullName>WARN</fullName>
                <color>#FFCC33</color>
                <label>Warning</label>
            </value>
            <value>
                <fullName>ERROR</fullName>
                <color>#FF0000</color>
                <label>Error</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>