force-app/main/default/objects/Log__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Log message</description>
    <inlineHelpText>Log message</inlineHelpText>
    <label>Message</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>