force-app/main/default/objects/Log__c/fields/Source_Object__c.field-meta.xml
<CustomField>
    <fullName>Source_Object__c</fullName>
    <description>Source Object API Name</description>
    <inlineHelpText>Source Object API Name</inlineHelpText>
    <label>Source Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>