force-app/main/default/objects/Log__c/fields/Source_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Record_Id__c</fullName>
    <description>Operational Record Id of the Source Object</description>
    <inlineHelpText>Operational Record Id of the Source Object</inlineHelpText>
    <label>Source Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>